--- a/index.html
+++ b/index.html
@@ -1,2 +1,4 @@
-<script src="https://lpcdn.lpsnmedia.net/webagent/client-SDK.min.js"></script>
+<head>
+  <script src="https://lpcdn.lpsnmedia.net/webagent/client-SDK.min.js"></script>
+</head>
 <div id="app"></div>
