--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<head>
-  <script src="https://lpcdn.lpsnmedia.net/webagent/client-SDK.min.js"></script>
-</head>
-<div id="app"></div>
+<!DOCTYPE>
+<html>  
+<body>  
+<p> Paragraph Tag </p>
+</body>  
+</html> 
