--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <p>Hello, world!</p>
 
   <script src="https://lpcdn.lpsnmedia.net/webagent/client-SDK.min.js"></script>
+  <script src="index.js"></script>
 </body>
 
 </html>
