--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-
+  <div id="app"></div>
   <p>Hello, world!</p>
 
   <script src="https://lpcdn.lpsnmedia.net/webagent/client-SDK.min.js"></script>
