--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div id="app"></div>
   <p>Hello, world!</p>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/rxjs/6.6.6/rxjs.umd.min.js">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/rxjs/6.5.2/rxjs.umd.js">
   </script>
   <script src="https://lpcdn.lpsnmedia.net/webagent/client-SDK.min.js"></script>
   <script src="index.js"></script>
