--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title Movie></title>
   <meta name="author" content="">
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,8 +11,6 @@
 
 <body>
   <div id="app"></div>
-  <p>Hello, world!</p>
-
   <script src="https://lpcdn.lpsnmedia.net/webagent/client-SDK.min.js"></script>
   <script src="index.js"></script>
 </body>
