--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <div id="app"></div>
+  <div id="app"> welcome to move search </div>
   <script src="https://lpcdn.lpsnmedia.net/webagent/client-SDK.min.js"></script>
   <script src="index.js"></script>
 </body>
